[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://CameraController.tscn" type="PackedScene" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://WorldGenerator.tscn" type="PackedScene" id=6]
[ext_resource path="res://ScoreController.tscn" type="PackedScene" id=7]

[node name="World" type="Node"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
z_index = 10
script = ExtResource( 2 )

[node name="CameraController" parent="." instance=ExtResource( 3 )]

[node name="GUI" parent="." instance=ExtResource( 5 )]

[node name="WorldGenerator" parent="." instance=ExtResource( 6 )]
z_index = 1

[node name="ScoreController" parent="." instance=ExtResource( 7 )]

[node name="HighscoreLine" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 600, 0 )
width = 4.0
default_color = Color( 0.796078, 1, 0.847059, 1 )
[connection signal="start_game" from="GUI" to="." method="_on_GUI_start_game"]
[connection signal="score_changed" from="ScoreController" to="GUI" method="_on_score_changed"]
